Testing Update Vercel

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     </p>
     <img src="assets/ousean-logo.jpg" alt="logo perusahaan" />
     <br />
-    <a href="tentang.html">Klik Disini Untuk Melihat Profil Perusahaan</a>
+    <a href="tentang.html">Klik Disini Untuk Melihat Profil Perusahaan</a> <br>
+    <img src="assets/ousean-logo.jpg" alt="logo perusahaan 2">
   </body>
 </html>
