--- a/index.html
+++ b/index.html
@@ -3,22 +3,52 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
     <title>Web Pertemuan 1 Ousean</title>
   </head>
   <body>
-    <!-- Halaman Utama -->
-    <h1>PT Global Ousean Digital</h1>
-    <p>
-      PT. Ousean Global Digital berdiri dan aktif pada 10 Maret 2019. Kami
-      menggambarkan diri kami sebagai lautan yang menjadi tempat bagi siapapun
-      untuk tumbuh, berkembang, terhubung, dan berdampak. <br />Kami
-      mengumpulkannya pada satu tempat, jiwa–jiwa yang siap membuat perbedaan
-      untuk dunia yang lebih baik. Berfokus pada tiga sektor utama, yaitu
-      Pendidikan, Kesehatan dan Pemberdayaan Manusia.
-    </p>
-    <img src="assets/ousean-logo.jpg" alt="logo perusahaan" />
-    <br />
-    <a href="tentang.html">Klik Disini Untuk Melihat Profil Perusahaan</a> <br>
-    <img src="assets/ousean-logo.jpg" alt="logo perusahaan 2">
+    <!-- Judul Perusahaan dan logo -->
+    <div class="container">
+      <h1>
+        PT Global Ousean Digital
+        <img
+          src="assets/ousean-logo.jpg"
+          alt="logo
+      perusahaan"
+        />
+      </h1>
+    </div>
+    <!-- Penjelasan dari perusahaan -->
+    <div>
+      <p>
+        PT. Ousean Global Digital berdiri dan aktif pada 10 Maret 2019. Kami
+        menggambarkan diri kami sebagai lautan yang menjadi tempat bagi siapapun
+        untuk tumbuh, berkembang, terhubung, dan berdampak. <br />Kami
+        mengumpulkannya pada satu tempat, jiwa–jiwa yang siap membuat perbedaan
+        untuk dunia yang lebih baik. Berfokus pada tiga sektor utama, yaitu
+        Pendidikan, Kesehatan dan Pemberdayaan Manusia.
+      </p>
+    </div>
+    <!-- Social Media Perusahaan -->
+    <div class="social">
+      <p>
+        PT Global Ousean Digital juga mempunyai social media yang bisa di follow
+        seperti Instagram.
+        <img src="assets/Logo Instagram.png" alt="Logo Instagram" />
+        <a href="https://www.instagram.com/ouseanschool/"
+          >Cek Instagram Disini</a
+        >
+      </p>
+    </div>
+    <!-- Komitmen Perusahaan -->
+    <div>
+      <p>
+        Perusahaan ini berkomitmen untuk membantu masyarakat meningkatkan skill
+      </p>
+    </div>
+    <!-- Pindah Halaman -->
+    <div>
+      <a href="tentang.html">Klik Disini Untuk Melihat Profil Perusahaan</a>
+    </div>
   </body>
 </html>
