--- a/tentang.html
+++ b/tentang.html
@@ -3,17 +3,29 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
     <title>Web Pertemuan 1 Ousean</title>
   </head>
   <body>
     <!-- Halaman Tentang Perusahaan -->
-    <h1>Profil Perusahaan PT Global Asean Digital</h1>
-    <p>Layanan Atau Produk Yang Di Tawarkan</p>
-    <ul>
-      <li>Kursus</li>
-      <li>Projek</li>
-      <li>Live Sesi</li>
-    </ul>
-    <a href="index.html">Kembali ke halaman beranda</a>
+    <div class="container">
+      <h1>
+        Profil Perushaan PT Global Ousean Digital
+        <img
+          src="assets/ousean-logo.jpg"
+          alt="logo
+      perusahaan"
+        />
+      </h1>
+    </div>
+    <div class="container">
+      <p>Layanan Atau Produk Yang Di Tawarkan</p>
+      <ul>
+        <li>Kursus</li>
+        <li>Projek</li>
+        <li>Live Sesi</li>
+      </ul>
+      <a href="index.html">Kembali ke halaman beranda</a>
+    </div>
   </body>
 </html>
